engine/crates/engine-v2/query-planning/src/tests/snapshots/engine_v2_query_planning__tests__schema1__graph.snap
---
source: engine/crates/engine-v2/query-planning/src/tests/schema1.rs
expression: "digraph {\n    0 [ label = \"root\" ]\n    1 [ label = \"name\" ]\n    2 [ label = \"name\" ]\n    3 [ label = \"author\" ]\n    4 [ label = \"reviews\" ]\n    5 [ label = \"topProducts\" ]\n    6 [ label = \"Root#products\", shape=box, color=blue ]\n    7 [ label = \"topProducts@Root#products\", shape=box, style=dashed, color=blue ]\n    8 [ label = \"FedEntity#reviews\", shape=box, color=blue ]\n    9 [ label = \"reviews@FedEntity#reviews\", shape=box, style=dashed, color=blue ]\n    10 [ label = \"author@FedEntity#reviews\", shape=box, style=dashed, color=blue ]\n    11 [ label = \"FedEntity#accounts\", shape=box, color=blue ]\n    12 [ label = \"name@FedEntity#accounts\", shape=box, style=dashed, color=blue ]\n    13 [ label = \"name@Root#products\", shape=box, style=dashed, color=blue ]\n    14 [ label = \"*id\" ]\n    15 [ label = \"id@FedEntity#reviews\", shape=box, style=dashed, color=blue ]\n    16 [ label = \"*upc\" ]\n    17 [ label = \"upc@Root#products\", shape=box, style=dashed, color=blue ]\n    0 -> 5 [ label = \"\" ]\n    0 -> 6 [ label = <<b>1</b>>, color=blue,fontcolor=blue ]\n    0 -> 6 [ label = \"\", style=dashed ]\n    6 -> 7 [ label = \"\", color=blue,fontcolor=blue ]\n    7 -> 5 [ label = \"\", color=turquoise ]\n    5 -> 4 [ label = \"\" ]\n    7 -> 8 [ label = <<b>1</b>>, color=blue,fontcolor=blue ]\n    5 -> 8 [ label = \"\", style=dashed ]\n    8 -> 9 [ label = \"\", color=blue,fontcolor=blue ]\n    9 -> 4 [ label = \"\", color=turquoise ]\n    4 -> 3 [ label = \"\" ]\n    9 -> 10 [ label = \"\", color=blue,fontcolor=blue ]\n    10 -> 3 [ label = \"\", color=turquoise ]\n    3 -> 2 [ label = \"\" ]\n    10 -> 11 [ label = <<b>1</b>>, color=blue,fontcolor=blue ]\n    3 -> 11 [ label = \"\", style=dashed ]\n    11 -> 12 [ label = \"\", color=blue,fontcolor=blue ]\n    12 -> 2 [ label = \"\", color=turquoise ]\n    5 -> 1 [ label = \"\" ]\n    7 -> 13 [ label = \"\", color=blue,fontcolor=blue ]\n    13 -> 1 [ label = \"\", color=turquoise ]\n    11 -> 14 [ label = \"\", color=orange ]\n    3 -> 14 [ label = \"\" ]\n    10 -> 15 [ label = \"\", color=blue,fontcolor=blue ]\n    15 -> 14 [ label = \"\", color=turquoise ]\n    8 -> 16 [ label = \"\", color=orange ]\n    5 -> 16 [ label = \"\" ]\n    7 -> 17 [ label = \"\", color=blue,fontcolor=blue ]\n    17 -> 16 [ label = \"\", color=turquoise ]\n}\n"
---
digraph {
    0 [ root]
    1 [ name]
    2 [ name]
    3 [ author]
    4 [ reviews]
    5 [ topProducts]
    6 [ Root#products]
    7 [ topProducts@Root#products]
    8 [ FedEntity#reviews]
    9 [ reviews@FedEntity#reviews]
    10 [ author@FedEntity#reviews]
    11 [ FedEntity#accounts]
    12 [ name@FedEntity#accounts]
    13 [ name@Root#products]
    14 [ *id]
    15 [ id@FedEntity#reviews]
    16 [ *upc]
    17 [ upc@Root#products]
    0 -> 5 [ label = "Field" ]
    0 -> 6 [ label = "CreateChildResolver", cost=1 ]
    0 -> 6 [ label = "HasChildResolver" ]
    6 -> 7 [ label = "CanProvide", cost=0 ]
    7 -> 5 [ label = "Provides" ]
    5 -> 4 [ label = "Field" ]
    7 -> 8 [ label = "CreateChildResolver", cost=1 ]
    5 -> 8 [ label = "HasChildResolver" ]
    8 -> 9 [ label = "CanProvide", cost=0 ]
    9 -> 4 [ label = "Provides" ]
    4 -> 3 [ label = "Field" ]
    9 -> 10 [ label = "CanProvide", cost=0 ]
    10 -> 3 [ label = "Provides" ]
    3 -> 2 [ label = "Field" ]
    10 -> 11 [ label = "CreateChildResolver", cost=1 ]
    3 -> 11 [ label = "HasChildResolver" ]
    11 -> 12 [ label = "CanProvide", cost=0 ]
    12 -> 2 [ label = "Provides" ]
    5 -> 1 [ label = "Field" ]
    7 -> 13 [ label = "CanProvide", cost=0 ]
    13 -> 1 [ label = "Provides" ]
    11 -> 14 [ label = "Requires" ]
    3 -> 14 [ label = "Field" ]
    10 -> 15 [ label = "CanProvide", cost=0 ]
    15 -> 14 [ label = "Provides" ]
    8 -> 16 [ label = "Requires" ]
    5 -> 16 [ label = "Field" ]
    7 -> 17 [ label = "CanProvide", cost=0 ]
    17 -> 16 [ label = "Provides" ]
}
