engine/crates/engine-v2/query-planning/src/tests/snapshots/engine_v2_query_planning__tests__schema1__solved-graph.snap
---
source: engine/crates/engine-v2/query-planning/src/tests/schema1.rs
expression: "digraph {\n    0 [ label = \"root\" ]\n    1 [ label = \"name\" ]\n    2 [ label = \"name\" ]\n    6 [ label = \"Root#products\", shape=parallelogram, color=dodgerblue ]\n    7 [ label = \"topProducts@Root#products\", shape=box, color=dodgerblue ]\n    8 [ label = \"FedEntity#reviews\", shape=parallelogram, color=dodgerblue ]\n    9 [ label = \"reviews@FedEntity#reviews\", shape=box, color=dodgerblue ]\n    10 [ label = \"author@FedEntity#reviews\", shape=box, color=dodgerblue ]\n    11 [ label = \"FedEntity#accounts\", shape=parallelogram, color=dodgerblue ]\n    12 [ label = \"name@FedEntity#accounts\", shape=box, color=dodgerblue ]\n    13 [ label = \"name@Root#products\", shape=box, color=dodgerblue ]\n    14 [ label = \"*id\" ]\n    15 [ label = \"id@FedEntity#reviews\", shape=box, color=dodgerblue ]\n    16 [ label = \"*upc\" ]\n    17 [ label = \"upc@Root#products\", shape=box, color=dodgerblue ]\n    0 -> 6 [ label = \"\", color=royalblue,fontcolor=royalblue ]\n    0 -> 6 [ label = \"\", style=dashed,arrowhead=none ]\n    6 -> 7 [ label = \"\", color=royalblue,fontcolor=royalblue ]\n    7 -> 8 [ label = \"\", color=royalblue,fontcolor=royalblue ]\n    8 -> 9 [ label = \"\", color=royalblue,fontcolor=royalblue ]\n    9 -> 10 [ label = \"\", color=royalblue,fontcolor=royalblue ]\n    10 -> 11 [ label = \"\", color=royalblue,fontcolor=royalblue ]\n    11 -> 12 [ label = \"\", color=royalblue,fontcolor=royalblue ]\n    12 -> 2 [ label = \"\", color=violet,arrowhead=none ]\n    7 -> 13 [ label = \"\", color=royalblue,fontcolor=royalblue ]\n    13 -> 1 [ label = \"\", color=violet,arrowhead=none ]\n    11 -> 14 [ label = \"\", color=orangered,arrowhead=inv ]\n    10 -> 15 [ label = \"\", color=royalblue,fontcolor=royalblue ]\n    15 -> 14 [ label = \"\", color=violet,arrowhead=none ]\n    8 -> 16 [ label = \"\", color=orangered,arrowhead=inv ]\n    7 -> 17 [ label = \"\", color=royalblue,fontcolor=royalblue ]\n    17 -> 16 [ label = \"\", color=violet,arrowhead=none ]\n}\n"
---
digraph {
    0 [ root]
    1 [ name]
    2 [ name]
    6 [ Root#products]
    7 [ topProducts@Root#products]
    8 [ FedEntity#reviews]
    9 [ reviews@FedEntity#reviews]
    10 [ author@FedEntity#reviews]
    11 [ FedEntity#accounts]
    12 [ name@FedEntity#accounts]
    13 [ name@Root#products]
    14 [ *id]
    15 [ id@FedEntity#reviews]
    16 [ *upc]
    17 [ upc@Root#products]
    0 -> 6 [ label = "CreateChildResolver" ]
    0 -> 6 [ label = "HasChildResolver" ]
    6 -> 7 [ label = "CanProvide" ]
    7 -> 8 [ label = "CreateChildResolver" ]
    8 -> 9 [ label = "CanProvide" ]
    9 -> 10 [ label = "CanProvide" ]
    10 -> 11 [ label = "CreateChildResolver" ]
    11 -> 12 [ label = "CanProvide" ]
    12 -> 2 [ label = "Provides" ]
    7 -> 13 [ label = "CanProvide" ]
    13 -> 1 [ label = "Provides" ]
    11 -> 14 [ label = "Requires" ]
    10 -> 15 [ label = "CanProvide" ]
    15 -> 14 [ label = "Provides" ]
    8 -> 16 [ label = "Requires" ]
    7 -> 17 [ label = "CanProvide" ]
    17 -> 16 [ label = "Provides" ]
}
